fix(toc): make toc text smaller on mobile
resolve #34

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -388,10 +388,10 @@ pagefind-searchbox::part(input) {
     font-size: 2rem;
   }
   .toc-item-h2 {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
   .toc-item-h3 {
-    font-size: 1rem;
+    font-size: 0.75rem;
   }
   .toc-list, .toc-list ul {
     margin-bottom: 0.25rem;
